# yatytbidlo_first_telegram_bot

./: .gitignore  .pre-commit-config.yaml  Doxyfile  README.md  format.sh  meson.build
.github/: dependabot.yml
.github/workflows/: c-cpp.yml  codacy.yml  codeql.yml  dependency-review.yml  mirror.yml  scorecard.yml
host/include/: host.hpp  session.hpp
host/src/: host.cpp  session.cpp
index/: js
javascript_ic/include/: auto_report_exception.hpp  js_ic.hpp  std.hpp
javascript_ic/src/: auto_report_exception.cpp  js_ic.cpp  std.cpp
src/: main.cpp  main.js
